<resources>
    <string name="app_name">106332013_HW6.1</string>
    <string name="chk1">Chocolate syrup</string>
    <string name="chk2">Sprinkles</string>
    <string name="chk3">Crushes nuts</string>
    <string name="chk4">Cherries</string>
    <string name="chk5">Orio cookie crumbles</string>
    <string name="btn1">SHOW TOAST</string>
    <string name="chocolate_order_message">Topping；Chocolate syrup</string>
    <string name="Sprinkles_order_message" />
    <string name="Crushes_nuts_order_message" />
    <string name="Cherries_order_message" />
    <string name="Orio_cookie_crumbles_order_message" />
</resources>